--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2024"
 
 [dependencies]
 iced = { version = "0.13.1", features = ["canvas"] }
+
+[dev-dependencies]
 rand = "0.9.2"
+
+[package.metadata.docs.rs]
+rustdoc-args = [ "--html-in-header", "katex-header.html" ]
