--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ iced = { version = "0.13.1", features = ["canvas"] }
 rand = "0.9.2"
 
 [package.metadata.docs.rs]
-rustdoc-args = [ "--html-in-header", "katex-header.html" ]
+rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]
